Added changes to fix java 11 tests